= svn
* [NEW] Added objs to Generator. Access it as you might ldshared. -John G.
* [CLEAN-UP] Removed the redundant .so rule from the generated rakefile. -John G.
* [FIXED] Correct defaults in Availability. [29]
* [NEW] Using rubylibdir from rbconfig for library path. [29]
* [NEW] Availability options go straight to availability without generator modification. [29]
* [NEW] CFLAGS and LDSHARED now accessible through .cflags and .ldshared. [29]
* [FIXED] Can now modify Availability options from the Generator contructor. This may break some existing extconfs that use the .new('libname','file_pattern_a', 'file_pattern_b') syntax. File patterns now only belong as arg 2 and should be an array or a string.
* [FIXED] No indenting generated Rakefile code. [26]

= 0.1.1 8/17/06
* [NEW] Logging! [22]
* [NEW] Added a description to the extension building task [21]
* [NEW] Added additional_code accessor. If you have stuff you want to add to the Rakefile the Generator doesn't provide for, feel free to stick it (in string form!) in here. Yes, I know this smells. If you have a better suggestion, PDI and tell me about it. [20]
* [FIXED] Use proper file extensions for libraries. [18]
* [FIXED] default source pattern for Generator [17]

= 0.1.0  6/28/06
* First release.